  * 2009/11/01 (Version 1.3)
    changed:
     - pictures stored low-res in memory, hi-res is created delayed in background
     - automatic motion path (random)
     - quick start deactivated because of some keyboard issues
     - output format simplified
     - no dependency to mjpegtools anymore

    bugfixes: 
     - picture selection by keyboard scroll photofilmstrip
     - resolution for SVCD fixed
     - UnicodeEncode errors
     - some minor bugs


  * 2009/09/18 (Version 1.2)
    changed:
     - quick start for importing images to a new PhotoFilmStrip

    bugfixes: 
     - GUI behavior
     - UnicodeEncode errors
     - wxPython assertions
     - no section errors
     - lots of minor bugs

  * 2009/02/18 (Version 1.1)
    changed:
     - memory consumption optimized. PhotoFilmStrip is now ready for large projects ;-)
    bugfix:
     - unexpected error when dropping images from an external application
     - leaving move operation correctly when stopping DragNDrop outside the window 


  * 2009/02/16 (Version 1.1-BETA)
    added:
     - new control for the image list (real photofilmstrip)
    changed:
     - invisible parts of the images are a kind of grayed out 
    bugfix:
     - a lot of bugfixes sent by the bug-report feature (many thanks to all users)


  * 2008/12/03 (Version 1.0)
    added:
     - new mouse cursors for resizing the sections
    changed:
     - program description and properties moved to Setting module
     - DummyPicture implementation optimized
    bugfix:
     - unexpected error (cannot identify image)
     - select/deselect of images in list works properly
     - mouse capturing (mainly for windows)
     - position of thumbnails in imagelist is working properly under windows too
     - settings file is saved in temp folder if no environment variable HOME is set under windows
  

  * 2008/11/27
    added:
     - information about selected rectange are shown
    changed: